--- a/app/src/main/res/drawable/ic_message_40.xml
+++ b/app/src/main/res/drawable/ic_message_40.xml
@@ -2,12 +2,12 @@
     android:viewportWidth="24" android:width="40dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#45d5fe"
         android:pathData="M12,20l-3,-3h-2a3,3 0,0 1,-3 -3v-6a3,3 0,0 1,3 -3h10a3,3 0,0 1,3 3v6a3,3 0,0 1,-3 3h-2l-3,3"
-        android:strokeColor="#333" android:strokeLineCap="round"
+        android:strokeColor="#32f6e1" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="1"/>
     <path android:fillColor="#45d5fe" android:pathData="M8,9L16,9"
-        android:strokeColor="#333" android:strokeLineCap="round"
+        android:strokeColor="#32f6e1" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="1"/>
     <path android:fillColor="#45d5fe" android:pathData="M8,13L14,13"
-        android:strokeColor="#333" android:strokeLineCap="round"
+        android:strokeColor="#32f6e1" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="1"/>
 </vector>
