--- a/app/src/main/res/drawable/ic_message_2.xml
+++ b/app/src/main/res/drawable/ic_message_2.xml
@@ -1,7 +1,7 @@
 <vector android:height="100dp" android:viewportHeight="24"
     android:viewportWidth="24" android:width="100dp" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#45d5fe"
-        android:pathData="M4,21v-13a3,3 0,0 1,3 -3h10a3,3 0,0 1,3 3v6a3,3 0,0 1,-3 3h-9l-4,4"
+        android:pathData="M12,20l-3,-3h-2a3,3 0,0 1,-3 -3v-6a3,3 0,0 1,3 -3h10a3,3 0,0 1,3 3v6a3,3 0,0 1,-3 3h-2l-3,3"
         android:strokeColor="#32f6e1" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="2"/>
     <path android:fillColor="#45d5fe" android:pathData="M8,9L16,9"
