--- a/app/src/main/res/drawable/ic_bell_60.xml
+++ b/app/src/main/res/drawable/ic_bell_60.xml
@@ -1,11 +1,11 @@
 <vector android:height="60dp" android:viewportHeight="24"
     android:viewportWidth="24" android:width="60dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#45d5fe"
+    <path android:fillColor="#34f8ff"
         android:pathData="M10,5a2,2 0,0 1,4 0a7,7 0,0 1,4 6v3a4,4 0,0 0,2 3h-16a4,4 0,0 0,2 -3v-3a7,7 0,0 1,4 -6"
-        android:strokeColor="#E3F8FF" android:strokeLineCap="round"
+        android:strokeColor="#34f8ff" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="1"/>
-    <path android:fillColor="#45d5fe"
+    <path android:fillColor="#34f8ff"
         android:pathData="M9,17v1a3,3 0,0 0,6 0v-1"
-        android:strokeColor="#E3F8FF" android:strokeLineCap="round"
+        android:strokeColor="#34f8ff" android:strokeLineCap="round"
         android:strokeLineJoin="round" android:strokeWidth="1"/>
 </vector>
