--- a/app/src/main/res/drawable/ic_circle_x_24.xml
+++ b/app/src/main/res/drawable/ic_circle_x_24.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#34f8ff"
+      android:strokeColor="#de5b52"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M9,12l2,2l4,-4"
+      android:pathData="M10,10l4,4m0,-4l-4,4"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#34f8ff"
+      android:strokeColor="#de5b52"
       android:strokeLineCap="round"/>
 </vector>
