--- a/app/src/main/res/drawable/ic_face_id_24.xml
+++ b/app/src/main/res/drawable/ic_face_id_24.xml
@@ -7,49 +7,49 @@
       android:pathData="M4,8v-2a2,2 0,0 1,2 -2h2"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:fillColor="#FF34f8ff"
+      android:strokeColor="#FF34f8ff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M4,16v2a2,2 0,0 0,2 2h2"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:fillColor="#FF34f8ff"
+      android:strokeColor="#FF34f8ff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M16,4h2a2,2 0,0 1,2 2v2"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:fillColor="#FF34f8ff"
+      android:strokeColor="#FF34f8ff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M16,20h2a2,2 0,0 0,2 -2v-2"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:fillColor="#FF34f8ff"
+      android:strokeColor="#FF34f8ff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M9,10L9.01,10"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#00000000"
+      android:fillColor="#FF34f8ff"
       android:strokeColor="#34f8ff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M15,10L15.01,10"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#00000000"
+      android:fillColor="#FF34f8ff"
       android:strokeColor="#34f8ff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M9.5,15a3.5,3.5 0,0 0,5 0"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#00000000"
+      android:fillColor="#FF34f8ff"
       android:strokeColor="#34f8ff"
       android:strokeLineCap="round"/>
 </vector>
