--- a/app/src/main/res/drawable/ic_mail_24.xml
+++ b/app/src/main/res/drawable/ic_mail_24.xml
@@ -8,13 +8,13 @@
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:strokeColor="#FF34f8ff"
       android:strokeLineCap="round"/>
   <path
       android:pathData="M3,7l9,6l9,-6"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"
+      android:fillColor="#FF34f8ff"
+      android:strokeColor="#FF34f8ff"
       android:strokeLineCap="round"/>
 </vector>
